--- a/js/index.html
+++ b/js/index.html
@@ -6,17 +6,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<script>
-		"use strict";
 		function startWebSocketWRMI(wsUrl, wsProtocols) {
 			const ws = new WebSocket(wsUrl, wsProtocols);
-			const wrmi = new WRMI(ws.send);
+			const wsdom = new WRMI((msg) => {
+				ws.send(msg);
+			});
 			ws.onopen = () => {
 				console.debug("WRMI WS connection open!");
 				console.debug("WebSocket object", ws);
-				console.debug("WRMI object", wrmi);
+				console.debug("WRMI object", wsdom);
 			};
 			ws.onmessage = (msg) => {
-				wrmi.handleIncomingMessage(msg.data);
+				wsdom.handleIncomingMessage(msg.data);
 			};
 		}
 		class WRMI {
@@ -39,14 +40,15 @@
 				this.d = (id) => {
 					this.values.delete(id);
 				};
-				this.r = (id) => {
-					const valJson = JSON.stringify(this.g(id));
+				this.r = (id, val) => {
+					const valJson = JSON.stringify(val);
 					(this.sender)(`${id}:${valJson}`);
 				};
 				this.sender = sender;
 				this.values = new Map();
 			}
 		}
+
 		startWebSocketWRMI("ws://localhost:3000/ws");
 	</script>
 </head>
