axum integration plus improved documentation

--- a/js/index.html
+++ b/js/index.html
@@ -54,7 +54,7 @@
 				this.values = new Map();
 			}
 		}
-		startWebSocketWRMI("ws://localhost:3000/ws");
+		WSDOMStartWebSocket("ws://localhost:3000/ws");
 	</script>
 </head>
 
